js/js.translator/testData/incremental/invalidation/jsCodeWithConstStringFromOtherModule/lib2/inlineFunction.0.6.kt
inline fun inlineFunction(): String {
    return js("var testObj = { $CONST_KEY: '$CONST_VALUE' }; testObj.$CONST_KEY") as String
}
